--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -29,12 +29,7 @@ branchProtectionRules:
       - "lint"
       - "conventionalcommits.org"
       - "header-check"
-      # Add required status checks like presubmit tests
-      # - "langchain-python-sdk-pr-py313 (toolbox-testing-438616)"
-      # - "langchain-python-sdk-pr-py312 (toolbox-testing-438616)"
-      # - "langchain-python-sdk-pr-py311 (toolbox-testing-438616)"
-      # - "langchain-python-sdk-pr-py310 (toolbox-testing-438616)"
-      # - "langchain-python-sdk-pr-py39 (toolbox-testing-438616)"
+      # TODO: Add required status checks like presubmit tests
     requiredApprovingReviewCount: 1
     requiresCodeOwnerReviews: true
     requiresStrictStatusChecks: true
