--- a/.github/sync-repo-settings.yaml
+++ b/.github/sync-repo-settings.yaml
@@ -29,7 +29,11 @@ branchProtectionRules:
       - "lint"
       - "conventionalcommits.org"
       - "header-check"
-      # TODO: Add required status checks like presubmit tests
+      - "llamaindex-python-sdk-pr-py313 (toolbox-testing-438616)"
+      - "llamaindex-python-sdk-pr-py312 (toolbox-testing-438616)"
+      - "llamaindex-python-sdk-pr-py311 (toolbox-testing-438616)"
+      - "llamaindex-python-sdk-pr-py310 (toolbox-testing-438616)"
+      - "llamaindex-python-sdk-pr-py39 (toolbox-testing-438616)"
     requiredApprovingReviewCount: 1
     requiresCodeOwnerReviews: true
     requiresStrictStatusChecks: true
