--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -74,4 +74,4 @@ jobs:
       - name: Run type-check
         env:
           MYPYPATH: './src'
-        run: mypy --install-types --non-interactive --cache-dir=.mypy_cache/ -p toolbox_llamaindex_sdk
+        run: mypy --install-types --non-interactive --cache-dir=.mypy_cache/ -p toolbox_llamaindex
