change back mypy command

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -77,4 +77,4 @@ jobs:
       - name: Run type-check
         env:
           MYPYPATH: './src'
-        run: mypy --install-types --non-interactive --cache-dir=.mypy_cache/ .
+        run: mypy --install-types --non-interactive --cache-dir=.mypy_cache/ -p toolbox_llamaindex
