chore: Update renovate config to group kokoro dependency upgrades.

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -40,6 +40,10 @@
       "groupName": "python-nonmajor",
       "matchLanguages": ["python"],
       "matchUpdateTypes": ["minor", "patch"]
+    },
+    {
+      "groupName": "kokoro dependencies",
+      "matchFileNames": [".kokoro/**"],
     }
   ]
 }
