--- a/.github/workflows/schedule_reporter.yml
+++ b/.github/workflows/schedule_reporter.yml
@@ -20,6 +20,10 @@ on:
 
 jobs:
   run_reporter:
+    permissions:
+        issues: 'write'
+        checks: 'read'
+        contents: 'read'
     uses: ./.github/workflows/cloud_build_failure_reporter.yml
     with:
       trigger_names: "llamaindex-python-sdk-test-nightly,llamaindex-python-sdk-test-on-merge"
