--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,16 +1,26 @@
 {
   extends: [
-    'config:recommended',
-    ':semanticCommits',
-    ':ignoreUnstable',
-    'group:allNonMajor',
-    ':separateMajorReleases',
-    ':prConcurrentLimitNone',
-    ':prHourlyLimitNone',
+    'config:recommended', // https://docs.renovatebot.com/presets-config/#configbase
+    ':semanticCommits',  // https://docs.renovatebot.com/presets-default/#semanticcommits
+    ':ignoreUnstable',  // https://docs.renovatebot.com/presets-default/#ignoreunstable
+    'group:allNonMajor',  // https://docs.renovatebot.com/presets-group/#groupallnonmajor
+    ':separateMajorReleases',  // https://docs.renovatebot.com/presets-default/#separatemajorreleases
+    ':prConcurrentLimitNone',  // View complete backlog as PRs. https://docs.renovatebot.com/presets-default/#prconcurrentlimitnone
+    ':prHourlyLimitNone', // https://docs.renovatebot.com/presets-default/#prhourlylimitnone
     ':preserveSemverRanges',
   ],
+  // Give ecosystem time to catch up.
+  // npm allows maintainers to unpublish a release up to 3 days later.
+  // https://docs.renovatebot.com/configuration-options/#minimumreleaseage
   minimumReleaseAge: '3',
+
+  // Create PRs, but do not update them without manual action.
+  // Reduces spurious retesting in repositories that have many PRs at a time.
+  // https://docs.renovatebot.com/configuration-options/#rebasewhen
   rebaseWhen: 'conflicted',
+
+  // Organizational processes.
+  // https://docs.renovatebot.com/configuration-options/#dependencydashboardlabels
   dependencyDashboardLabels: [
     'type: process',
   ],
@@ -22,6 +32,7 @@
       ],
       pinDigests: true,
     },
+    // Python Specific
     {
       matchPackageNames: [
         'pytest',
