--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "toolbox-llamaindex"
-version="0.1.0"
+dynamic = ["version"]
 description = "Python SDK for interacting with the Toolbox service with LlamaIndex"
 license = {file = "LICENSE"}
 requires-python = ">=3.9"
@@ -25,6 +25,9 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
+
+[tool.setuptools.dynamic]
+version = {attr = "toolbox_langchain.version.__version__"}
 
 [project.urls]
 Homepage = "https://github.com/googleapis/genai-toolbox"
