--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,10 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/googleapis/genai-toolbox"
-Repository = "https://github.com/googleapis/genai-toolbox.git"
-"Bug Tracker" = "https://github.com/googleapis/genai-toolbox/issues"
+Homepage = "https://github.com/googleapis/genai-toolbox-llamaindex-python"
+Repository = "https://github.com/googleapis/genai-toolbox-llamaindex-python.git"
+"Bug Tracker" = "https://github.com/googleapis/genai-toolbox-llamaindex-python/issues"
+Changelog = "https://github.com/googleapis/genai-toolbox-llamaindex-python/blob/main/CHANGELOG.md"
 
 [project.optional-dependencies]
 test = [
